# GarlicNoodleEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json
NoodleEngine/: CMakeLists.txt  Camera.h  CameraController.cpp  CameraController.h  CelestialBody.cpp  CelestialBody.h  GravityPivot.cpp  GravityPivot.h  InputHandler.h  Line.h  NoodleEngine.cpp  Satellite.cpp  Satellite.h  imgui_impl_opengl3.cpp  planetFragment.fs
NoodleEngine/gravity/: CelestialBody.cpp  CelestialBody.h  GravityPivot.cpp  GravityPivot.h  GravitySimulation.cpp  GravitySimulation.h  Satellite.cpp  Satellite.h  Simulation.h
NoodleEngine/shaders/: planetFragment.fs
includes/: MaterialCooker.h  ObjectsGeneration.h  ShaderStructs.h  Vertex.h  camera.h  filesystem.h  shader_m.h  shapes.h
src/: CMakeLists.txt  Camera.h  CelestialBody.cpp  Colors.h  NoodleEngine.cpp  NoodleGui.h  imgui_impl_opengl3.cpp
src/gravity/: CelestialBody.cpp  CelestialBody.h  GravityPivot.h  GravitySimulation.cpp  GravitySimulation.h  Satellite.h
